added the main section

--- a/index.html
+++ b/index.html
@@ -13,16 +13,62 @@
 </head>
 
 <body class="azeret-mono-normal">
-    <section id="hero-bg">    
+    <header id="hero-bg">
         <div>
             <img src="assets/Group.png" alt="">
             <h1>"In the near future, I hope to become a <br>Developer."</h1>
             <p>The web developer future is bright! Expect AI tools to assist with coding, while devs focus on creative
-            solutions.</p>
+                solutions.</p>
             <a href=""><button class="btn-primary">Contact with me</button></a>
         </div>
-    </section>
-    <main>
+    </header>
+    <main class="azeret-mono-normal">
+        <!-- First Section-->
+        <section class="hero">
+            <h2 class="hero-title">Why Web Development??</h2>
+            <p class="mega-des">Web development is a dynamic field that offers a compelling mix of creativity,
+                problem-solving, and
+                opportunity. Here's a breakdown of why you might consider it:</p>
+
+            <!-- Second Section-->
+            <section class="second-hero">
+                <div class="left-cart">
+                    <h2>I will Do Coding and Change The World</h2>
+                    <p>The world needs passionate coders who want to make a positive impact.</p>
+                    <a href=""><button>Learn More</button></a>
+                </div>
+                <br>
+                <div>
+                    <img src="assets/Layer_1.png" alt="">
+                </div>
+            </section>
+            <!--3rd Section -->
+            <section class="third-hero">
+                <div>
+                    <img src="assets/Group 3.png" alt="">
+                </div>
+                <div class="leftcart">
+                    <h2>I will help People by creating Modern Web System</h2>
+                    <p>Remember, creating modern web systems can be challenging, but it's also rewarding. Don't hesitate to start small, learn from online resources, and build your skills as you go. pen_spark</p>
+                    <a href=""><button>Learn More</button></a>
+                </div>
+            </section>
+
+            <!-- Fourth Section -->
+
+            <section class="fth-hero">
+                <div class="lft-cart">
+                    <h2>I will Do Coding and Change The World</h2>
+                    <p>The world needs passionate coders who want to make a positive impact.</p>
+                    <a><button>Learn More</button></a>
+                </div>
+                <br>
+                <div>
+                    <img src="assets/Layer_1.png" alt="">
+                </div>
+            </section>
+        </section>
+
 
     </main>
     <footer>
