added the video section and iframe in main section

--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
                 </div>
                 <div class="leftcart">
                     <h2>I will help People by creating Modern Web System</h2>
-                    <p>Remember, creating modern web systems can be challenging, but it's also rewarding. Don't hesitate to start small, learn from online resources, and build your skills as you go. pen_spark</p>
+                    <p>Remember, creating modern web systems can be challenging, but it's also rewarding. Don't hesitate
+                        to start small, learn from online resources, and build your skills as you go. pen_spark</p>
                     <a href=""><button>Learn More</button></a>
                 </div>
             </section>
@@ -69,6 +70,16 @@
             </section>
         </section>
 
+        <!--Video Section-->
+
+        <section id="vdo">
+            <h2 class="vdo-title">My Inspiration</h2>
+            <p class="vdo-des">Everyone has some inspiration in life. Talking about my inspiration then Jhangar Mahbub sir. Not only me but everyone will be motivated by his words.</p>
+            <div>
+                <iframe width="1076" height="550" src="https://www.youtube.com/embed/01l0s1iR_ZI?si=xYdHJROD0hLRuSez" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+        </section>
+        
 
     </main>
     <footer>
