added the flex section in all div

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <!-- First Section-->
         <section class="hero">
             <h2 class="hero-title">Why Web Development??</h2>
-            <p class="mega-des">Web development is a dynamic field that offers a compelling mix of creativity,
+            <p class="hero-des">Web development is a dynamic field that offers a compelling mix of creativity,
                 problem-solving, and
                 opportunity. Here's a breakdown of why you might consider it:</p>
 
@@ -74,12 +74,48 @@
 
         <section id="vdo">
             <h2 class="vdo-title">My Inspiration</h2>
-            <p class="vdo-des">Everyone has some inspiration in life. Talking about my inspiration then Jhangar Mahbub sir. Not only me but everyone will be motivated by his words.</p>
+            <p class="vdo-des">Everyone has some inspiration in life. Talking about my inspiration then Jhangar Mahbub
+                sir. Not only me but everyone will be motivated by his words.</p>
             <div>
-                <iframe width="1076" height="550" src="https://www.youtube.com/embed/01l0s1iR_ZI?si=xYdHJROD0hLRuSez" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="1076" height="550" src="https://www.youtube.com/embed/01l0s1iR_ZI?si=xYdHJROD0hLRuSez"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </section>
-        
+        <!--My Target Section-->
+        <section class="hero">
+            <h2 class="hero-title">My Current Target</h2>
+            <p class="hero-des">These are just a few examples, and the best target for you will depend on your specific
+                project and interests.</p>
+
+            <!-- Flex Container-->
+            <div class="flex-container">
+                <div class="con-div">
+                    <img src="assets/html.png" alt="">
+                    <h3>HTML</h3>
+                    <p>HTML, or HyperText Markup Language, is the foundation of web pages.
+                    </p>
+                    <p class="share-p">Learn More</p>
+                </div>
+
+                <div class="sec-div">
+                    <img src="assets/css.png" alt="">
+                    <h3>CSS</h3>
+                    <p>CSS stands for Cascading Style Sheets. By separating style 
+                    </p>
+                    <p class="share-p">Learn More</p>
+                </div>
+
+                <div class="trd-div"> 
+                    <img src="assets/js.png" alt="">
+                    <h3>JavaScript</h3>
+                    <p>JavaScript, often abbreviated is the programming language.</p>
+                    <p class="share-p">Learn More</p>
+                </div>
+
+            </div>
+        </section>
 
     </main>
     <footer>
