added the all search bar section in main

--- a/index.html
+++ b/index.html
@@ -102,18 +102,30 @@
                 <div class="sec-div">
                     <img src="assets/css.png" alt="">
                     <h3>CSS</h3>
-                    <p>CSS stands for Cascading Style Sheets. By separating style 
+                    <p>CSS stands for Cascading Style Sheets. By separating style
                     </p>
                     <p class="share-p">Learn More</p>
                 </div>
 
-                <div class="trd-div"> 
+                <div class="trd-div">
                     <img src="assets/js.png" alt="">
                     <h3>JavaScript</h3>
                     <p>JavaScript, often abbreviated is the programming language.</p>
                     <p class="share-p">Learn More</p>
                 </div>
 
+            </div>
+        </section>
+
+        <!--Search Bar Section-->
+        <section class="img-search">
+            <div class="img-title">
+                <h1>I need support</h1>
+                <p>I'm here for you. Can you tell me a little more about what kind of support you need right now?</p>
+            </div>
+            <div class="src-box">
+                <input placeholder="Suggest me any feedback for me"type="search" name="" id="">
+                <button>Submit</button>
             </div>
         </section>
 
