added the footer section

--- a/index.html
+++ b/index.html
@@ -130,8 +130,15 @@
         </section>
 
     </main>
-    <footer>
-
+    <footer class="foot">
+        <div>
+            <h3>An Open Commitment by Shehab Uddin</h3>
+        </div>
+        <div>
+            <a href="https://www.facebook.com/" target="facebook.com"><img src="assets/facebook.png" alt=""></a>
+            <a href="https://github.com/" target="https://github.com/"><img src="assets/github.png" alt=""></a>
+            <a href="https://www.linkedin.com/" target="https://www.linkedin.com/"><img src="assets/linkedin-icon 1.png" alt=""></a>
+        </div>
     </footer>
 </body>
 
